chirpstack-kubernetes/chirpstack-application-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpstack-application-server
  labels:
    app: chirpstack-application-server
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: chirpstack-application-server
  template:
    metadata:
      labels:
        app: chirpstack-application-server
    spec:
      containers:
        - name: chirpstack-application-server
          #image: chirpstack/chirpstack-application-server:3.11.1
          image: prrsjunior/chirpstack-application-server
          ports:
            - name: ui-port
              containerPort: 8080
            - name: join-port
              containerPort: 8003
            - name: http-port
              containerPort: 8001
            - name: monitoring-port
              containerPort: 8101
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 250m
              memory: 250Mi
          volumeMounts:
            - name: chirpstack-application-server
              mountPath: /etc/chirpstack-application-server/chirpstack-application-server.toml
              subPath: chirpstack-application-server.toml
      volumes:
        - name: chirpstack-application-server
          configMap:
            name: chirpstack-application-server
