chirpstack-kubernetes/chirpstack-application-server/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chirpstack-application-server
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "false"
  labels:
    app: chirpstack-application-server
spec:
  # This is required to tell the ingress to respond to HTTPS
  tls:
    - hosts:
        - chirpstack-application-server.stackone
  rules:
    - host: chirpstack-application-server.stackone
      http:
        paths:
          - path: /
            backend:
              serviceName: chirpstack-application-server
              servicePort: 443
